# employee-registry-api

./: .gitignore  CHANGELOG.md  README.md  app.py  pyproject.toml  rebuild.sh  requirements.txt  run.sh  test.sh
.github/workflows/: release-please.yaml
apis/: __init__.py  version.py
employee_server/: __init__.py  db.py  schema.sql
employee_server/api/: __init__.py
employee_server/api/employee_types/: employee_type.py
employee_server/api/teams/: team.py
employee_server/api/types/: types.py
employee_server/api/version/: version.py
employee_server/models/: employee.py  employee_type.py  team.py
tests/: conftest.py  data.sql  test_db.py  test_employee_types.py  test_factory.py  test_teams.py  test_types.py  test_version.py
